Dissociate done & undone task

--- a/package.json
+++ b/package.json
@@ -2,15 +2,31 @@
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
+  "contributors": [
+    {
+      "name": "Dimitri Fontenelle",
+      "email": "dimitri.fontenelle@3wa.io"
+    },
+    {
+      "name": "Jean-Christophe de La Roche Saint-André",
+      "email": "jean-christophe.de-la-roche-saint-andre@3wa.io"
+    },
+    {
+      "name": "Rémy Richard",
+      "email": "remy.richard@3wa.io"
+    },
+    {
+      "name": "Charly Jordan",
+      "email": "charly.jordan@3wa.io"
+    }
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
